First official commit
a lot of fixes
a lot of upgrades
-more to come

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
     "gulp-minify-css": "1.2.4",
+    "gulp-git": "1.11.3",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.2",
     "method-override": "2.3.6",
@@ -13,14 +14,15 @@
     "q": "*",
     "bower": "1.7.9",
     "gulp-util": "3.0.7",
-    "shelljs": "0.7.0",
+    "shelljs": "0.7.4",
     "tiny-lr": "*"
   },
-  "devDependencies": {
-    "gulp-util": "3.0.7",
-    "shelljs": "0.7.0"
-  },
-  "cordovaPlugins": [],
+  "cordovaPlugins": [
+    "com.ionic.keyboard",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-statusbar"
+  ],
   "cordovaPlatforms": [
     "android"
   ]
