--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,15 @@
 {
-  "name": "HelloIonic",
+  "name": "helloionic",
   "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.9"
-  },
   "dependencies": {
-    "angular-bootstrap": "~0.11.0",
-    "bootstrap": "~3.1.1",
-    "angular-local-storage": "~0.0.5",
-    "angular-resource": "~1.2.16",
-    "angular-timer": "~1.1.4",
-    "ngCordova": "~0.1.2-alpha"
+    "ionic": "driftyco/ionic-bower#v1.3.1",
+    "angular-bootstrap": "2.1.3",
+    "bootstrap": "3.3.7",
+    "angular-local-storage": "0.5.0",
+    "angular-resource": "1.5.8",
+    "angular-timer": "1.3.4",
+    "ngCordova": "0.1.27-alpha",
+    "moment": "2.15.1",
+    "humanize-duration":"3.9.1"
   }
 }
