Bugs, Refactor, Features
* Show rarity of item in shop-detail and inventory
* Show Weapons as either 1H or 2H in shop and inventory and show Level
* fixed bug where HP shows as NaN/900
* remove deprecated mongoose-q
* Indicate items that you dont own in shop

--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "com.ionic.keyboard",
     "cordova-plugin-whitelist",
     "cordova-plugin-inappbrowser",
-    "cordova-plugin-statusbar"
+    "cordova-plugin-statusbar",
+    {
+      "locator": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
+      "id": "cordova-plugin-x-toast"
+    }
   ],
   "cordovaPlatforms": [
     "android"
