--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-timer": "1.3.4",
     "ngCordova": "0.1.27-alpha",
     "moment": "2.15.1",
-    "humanize-duration":"3.9.1"
+    "humanize-duration": "3.9.1",
+    "underscore": "^1.8.3"
   }
 }
