--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "An Ionic project",
   "dependencies": {
+    "bower": "1.7.9",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
-    "gulp-minify-css": "1.2.4",
     "gulp-git": "1.11.3",
+    "gulp-minify-css": "1.2.4",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.2",
-    "method-override": "2.3.6",
-    "jawbone-up": "^0.1.2",
-    "q": "*",
-    "bower": "1.7.9",
     "gulp-util": "3.0.7",
+    "gulp-inject": "^4.1.0",
+    "jawbone-up": "^0.1.2",
+    "method-override": "2.3.6",
+    "q": "*",
     "shelljs": "0.7.4",
     "tiny-lr": "*"
   },
