--- a/package.json
+++ b/package.json
@@ -1,34 +1,63 @@
 {
-  "name": "ionic-project",
-  "version": "1.0.0",
-  "description": "An Ionic project",
-  "dependencies": {
-    "bower": "1.8.0",
-    "gulp": "3.9.1",
-    "gulp-concat": "2.6.1",
-    "gulp-git": "1.12.0",
-    "gulp-minify-css": "1.2.4",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "3.0.0",
-    "gulp-util": "3.0.7",
-    "gulp-inject": "^4.2.0",
-    "jawbone-up": "^0.1.2",
-    "method-override": "2.3.7",
-    "q": "*",
-    "shelljs": "0.7.5",
-    "tiny-lr": "*"
-  },
-  "cordovaPlugins": [
-    "com.ionic.keyboard",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-inappbrowser",
-    "cordova-plugin-statusbar",
-    {
-      "locator": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
-      "id": "cordova-plugin-x-toast"
+    "name": "ionic-project",
+    "version": "1.0.0",
+    "description": "An Ionic project",
+    "dependencies": {
+        "bower": "1.8.0",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-console": "~1.0.4",
+        "cordova-plugin-device": "~1.1.3",
+        "cordova-plugin-inappbrowser": "~1.4.0",
+        "cordova-plugin-splashscreen": "~4.0.0",
+        "cordova-plugin-statusbar": "~2.2.0",
+        "cordova-plugin-whitelist": "~1.2.2",
+        "cordova-plugin-x-toast": "git+https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
+        "gulp": "3.9.1",
+        "gulp-concat": "2.6.1",
+        "gulp-git": "1.12.0",
+        "gulp-inject": "^4.2.0",
+        "gulp-minify-css": "1.2.4",
+        "gulp-rename": "1.2.2",
+        "gulp-sass": "3.0.0",
+        "gulp-util": "3.0.7",
+        "ionic-plugin-keyboard": "https://github.com/driftyco/ionic-plugins-keyboard.git",
+        "jawbone-up": "^0.1.2",
+        "method-override": "2.3.7",
+        "q": "*",
+        "shelljs": "0.7.5",
+        "tiny-lr": "*"
+    },
+    "cordovaPlugins": [
+        "com.ionic.keyboard",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-inappbrowser",
+        "cordova-plugin-statusbar",
+        {
+            "locator": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
+            "id": "cordova-plugin-x-toast"
+        }
+    ],
+    "cordovaPlatforms": [
+        "android"
+    ],
+    "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-gulp": "1.0.1",
+        "@ionic/cli-plugin-ionic1": "2.0.0"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-x-toast": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
-  ],
-  "cordovaPlatforms": [
-    "android"
-  ]
 }
