--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "ngCordova": "0.1.27-alpha",
     "moment": "2.17.1",
     "humanize-duration": "3.10.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "font-awesome": "fontawesome#^4.7.0"
   }
 }
